fixed issue with overlap on hover

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -104,6 +104,7 @@ li:hover {
   flex-direction: column;
   align-items: center;
   padding: 1rem;
+  margin-bottom: 2rem;
 }
 
 .project_container p {
